--- a/index.html
+++ b/index.html
@@ -2,15 +2,41 @@
 <html>
 <head> <title>Google Homepage</title> </head>
 <body>
+<div>
+    <ul>
+        About
+        Store
+    </ul>
+</div>
+<div>
+    Gmail
+    Images
+    <img>
+    <button type="button">Sign In</button>
+</div>
 <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google Logo">
 
-<h1></h1>
+<h1>
 <form>
     <input type="text" id=Searchbar name=Searchbar>
 </form>
+</h1>
 <button type="submit">Google Search</button>
 <button type="button">I'm Feeling Lucky</button>
+<div>Google offered in: Francais</div>
 
+<div>Canada</div>
+
+<div>
+    <ul>
+        Advertising
+        Business
+        How Search works
+        Privacy
+        Terms
+        Settings
+    </ul>
+</div>
 
 
 </body>
